# mc-status-notifications

./: Cargo.toml  LICENSE  README.md
src/: main.rs
