[package]
name = "mc-status-notifications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
reqwest = {version =  "0.11.16", features = ["json"]}
serde = { version = "1.0.160", features = ["derive"] }
timer = "0.2.0"
tokio = { version = "1.28.0", features = ["full"] }
